✨ call API from the client side using AJAX

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,4 @@
-<h1>{{greeting}}</h1>
+  <textarea id="output"></textarea>
+  <label for="input">Type text or URI here:</label>
+  <input id="input" value="{{sample_input_data}}">
+  <input id="initial-input-data" type="hidden" value="{{sample_input_data}}">
