--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,6 @@
+
+  <button id="copy" class="btn" data-clipboard-action="copy" data-clipboard-target="#output"><img src="public/graphics/clippy.svg"> <span>Copy to clipboard</span></button>
   <textarea id="output"></textarea>
   <label for="input">Type text or URI here:</label>
-  <input id="input" value="{{sample_input_data}}">
-  <input id="initial-input-data" type="hidden" value="{{sample_input_data}}">
+  <input id="input" value="{{sample_input_data}}"> <a href="/" id="refresh"><img src="public/graphics/refresh.png"></a>
+  <input type="hidden" id="initial-input-data" value="{{sample_input_data}}">
