--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,8 @@
     {{#each css_files}}
     <link rel="stylesheet" href="{{this}}">
     {{/each}}
-
+    
+    <script src="public/js/clipboard.min.js"></script>
     <script src="public/js/app.js"></script>
 
     <script>
@@ -17,6 +18,8 @@
     </script>
 </head>
 <body>
+
+  <h1><img src="public/graphics/logo.svg" id="logo"> ASCII QR code generator</h1>
 
 {{{body}}}
 
