--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,5 +2,5 @@
   <button id="copy" class="btn" data-clipboard-action="copy" data-clipboard-target="#output"><img src="public/graphics/clippy.svg"> <span>Copy to clipboard</span></button>
   <textarea id="output"></textarea>
   <label for="input">Type text or URI here:</label>
-  <input id="input" value="{{sample_input_data}}"> <a href="/" id="refresh"><img src="public/graphics/refresh.png"></a>
+  <input id="input" value="{{sample_input_data}}"> <a href="javascript:void(0)" id="refresh"><img src="public/graphics/refresh.png"></a>
   <input type="hidden" id="initial-input-data" value="{{sample_input_data}}">
