--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 
-  <button id="copy" class="btn" data-clipboard-action="copy" data-clipboard-target="#output"><img src="public/graphics/clippy.svg"> <span>Copy to clipboard</span></button>
+  <button id="copy" class="btn tooltip" data-clipboard-action="copy" data-clipboard-target="#output"><span class="tooltiptext">Copied!</span><img src="public/graphics/clippy.svg"> <span class="value">Copy to clipboard</span></button>
   <textarea id="output"></textarea>
   <label for="input">Type text or URI here:</label>
   <input id="input" value="{{sample_input_data}}"> <a href="javascript:void(0)" id="refresh"><img src="public/graphics/refresh.png"></a>
