--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-  <h1><img src="public/graphics/logo.svg" id="logo"> ASCII QR code generator</h1>
+  <h1><a href="/"><img src="public/graphics/logo.svg" id="logo"> ASCII QR code generator</a></h1>
 
 {{{body}}}
 
