✨ disable editing value of text area

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,3 +4,4 @@
   <label for="input">Type text or URI here:</label>
   <input id="input" value="{{sample_input_data}}"> <a href="javascript:void(0)" id="refresh"><img src="public/graphics/refresh.png"></a>
   <input type="hidden" id="initial-input-data" value="{{sample_input_data}}">
+  <input type="hidden" id="initial-output-data">
