🎨 remove blinking cursor

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -221,7 +221,8 @@ $GREEN : #0F0;
   width: 100%;
   resize: vertical;
   background: $PANTONE-128-C;
-  color: $PANTONE-512-C;
+  color: transparent;
+  text-shadow: 0 0 0 $PANTONE-512-C;
   padding-top: 30px;
   font-size: 15px;
   border-top: 9px solid $PANTONE-512-C;
